AuthorCacheService test have been added and other updates